--- a/index.html
+++ b/index.html
@@ -30,6 +30,113 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="col">
+          9AM
+        </div>
+        <div class="col-8">
+          2 of 3 (wider)
+        </div>
+        <div class="col">
+          3 of 3
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          10AM
+        </div>
+        <div class="col-8">
+          2 of 3 (wider)
+        </div>
+        <div class="col">
+          3 of 3
+        </div>
+      </div>  
+        
+      <div class="row">
+        <div class="col">
+          11AM
+        </div>
+        <div class="col-8">
+          2 of 3 (wider)
+        </div>
+        <div class="col">
+          3 of 3
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          12PM
+        </div>
+        <div class="col-8">
+          2 of 3 (wider)
+        </div>
+        <div class="col">
+          3 of 3
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          1PM
+        </div>
+        <div class="col-8">
+          2 of 3 (wider)
+        </div>
+        <div class="col">
+          3 of 3
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          2PM
+        </div>
+        <div class="col-8">
+          2 of 3 (wider)
+        </div>
+        <div class="col">
+          3 of 3
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          3PM
+        </div>
+        <div class="col-8">
+          2 of 3 (wider)
+        </div>
+        <div class="col">
+            3 of 3
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          4PM
+        </div>
+        <div class="col-8">
+          2 of 3 (wider)
+        </div>
+        <div class="col">
+          3 of 3
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          5PM
+        </div>
+        <div class="col-8">
+          2 of 3 (wider)
+        </div>
+        <div class="col">
+          3 of 3
+        </div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
