Added classes to the save and time so they could be styled. Also added a border to the right side of the time

--- a/index.html
+++ b/index.html
@@ -31,109 +31,109 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="row">
-        <div class="col">
+        <div class="col hour">
           9AM
         </div>
-        <div class="col-8">
+        <div class="col-9">
           2 of 3 (wider)
         </div>
-        <div class="col">
+        <div class="col saveBtn">
           3 of 3
         </div>
       </div>
 
       <div class="row">
-        <div class="col">
+        <div class="col hour">
           10AM
         </div>
-        <div class="col-8">
+        <div class="col-9">
           2 of 3 (wider)
         </div>
-        <div class="col">
+        <div class="col saveBtn">
           3 of 3
         </div>
       </div>  
         
       <div class="row">
-        <div class="col">
+        <div class="col hour">
           11AM
         </div>
-        <div class="col-8">
+        <div class="col-9">
           2 of 3 (wider)
         </div>
-        <div class="col">
+        <div class="col saveBtn">
           3 of 3
         </div>
       </div>
 
       <div class="row">
-        <div class="col">
+        <div class="col hour">
           12PM
         </div>
-        <div class="col-8">
+        <div class="col-9">
           2 of 3 (wider)
         </div>
-        <div class="col">
+        <div class="col saveBtn">
           3 of 3
         </div>
       </div>
 
       <div class="row">
-        <div class="col">
+        <div class="col hour">
           1PM
         </div>
-        <div class="col-8">
+        <div class="col-9">
           2 of 3 (wider)
         </div>
-        <div class="col">
+        <div class="col saveBtn">
           3 of 3
         </div>
       </div>
 
       <div class="row">
-        <div class="col">
+        <div class="col hour">
           2PM
         </div>
-        <div class="col-8">
+        <div class="col-9">
           2 of 3 (wider)
         </div>
-        <div class="col">
+        <div class="col saveBtn">
           3 of 3
         </div>
       </div>
 
       <div class="row">
-        <div class="col">
+        <div class="col hour">
           3PM
         </div>
-        <div class="col-8">
+        <div class="col-9">
           2 of 3 (wider)
         </div>
-        <div class="col">
-            3 of 3
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          4PM
-        </div>
-        <div class="col-8">
-          2 of 3 (wider)
-        </div>
-        <div class="col">
+        <div class="col saveBtn">
           3 of 3
         </div>
       </div>
 
       <div class="row">
-        <div class="col">
-          5PM
+        <div class="col hour">
+          4PM
         </div>
-        <div class="col-8">
+        <div class="col-9">
           2 of 3 (wider)
         </div>
-        <div class="col">
+        <div class="col saveBtn">
+          3 of 3
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col hour">
+          5PM
+        </div>
+        <div class="col-9">
+          2 of 3 (wider)
+        </div>
+        <div class="col saveBtn">
           3 of 3
         </div>
       </div>
