Added ids to each of the time rows

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row">
+      <div class="row time-block" id="9">
         <div class="col-1 hour">
           9AM
         </div>
@@ -43,7 +43,7 @@
         </div>
       </div>  
 
-      <div class="row">
+      <div class="row time-block" id="10">
         <div class="col-1 hour">
           10AM
         </div>
@@ -55,7 +55,7 @@
         </div>
       </div>  
         
-      <div class="row">
+      <div class="row time-block" id="11">
         <div class="col-1 hour">
           11AM
         </div>
@@ -67,7 +67,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row time-block" id="12">
         <div class="col-1 hour">
           12PM
         </div>
@@ -79,7 +79,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row time-block" id="1">
         <div class="col-1 hour">
           1PM
         </div>
@@ -91,7 +91,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row time-block" id="2">
         <div class="col hour">
           2PM
         </div>
@@ -103,7 +103,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row time-block" id="3">
         <div class="col-1 hour">
           3PM
         </div>
@@ -115,7 +115,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row time-block" id="4">
         <div class="col-1 hour">
           4PM
         </div>
@@ -127,7 +127,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row time-block" id="5">
         <div class="col-1 hour" id="time">
           5PM
         </div>
