Fixed a formatting error in the rows

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
 
       <div class="row time-block" id="2">
-        <div class="col hour">
+        <div class="col-1 hour">
           2PM
         </div>
         <textarea class="col-9 description">
