--- a/index.html
+++ b/index.html
@@ -40,49 +40,49 @@
           </tr>
         </thead>
         <tr id="hour-9" data-time="9" class="time-slot">
-          <td class="data-time">9:00AM</td>
-          <td class="data-schedule"><textarea name="9-text"></textarea></td>
-          <td class="data-save" id="9am"><i class="fa-solid fa-lock"></i></td>
+          <td class="col-1 time-block">9:00AM</td>
+          <td class="col-9 description"><textarea class="col-12 description" name="9-text"></textarea></td>
+          <td class="col-1 saveBtn" id="9am"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
         <tr id="hour-10" data-time="10" class="time-slot">
-          <td class="data-time">10:00AM</td>
-          <td class="data-schedule"><textarea name="10-text"></textarea></td>
-          <td class="data-save" id="10am"><i class="fa-solid fa-lock"></i></td>
+          <td class="col-1 time-block">10:00AM</td>
+          <td class="col-9 description"><textarea class="col-12 description" name="10-text"></textarea></td>
+          <td class="col-1 saveBtn" id="10am"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
         <tr id="hour-11" data-time="11" class="time-slot">
-          <td class="data-time">11:00AM</td>
-          <td class="data-schedule"><textarea name="11-text"></textarea></td>
-          <td class="data-save" id="11am"><i class="fa-solid fa-lock"></i></td>
+          <td class="col-1 time-block">11:00AM</td>
+          <td class="col-9 description"><textarea class="col-12 description" name="11-text"></textarea></td>
+          <td class="col-1 saveBtn" id="11am"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
         <tr id="hour-12" data-time="12" class="time-slot">
-          <td class="data-time">12:00PM</td>
-          <td class="data-schedule"><textarea name="12-text"></textarea></td>
-          <td class="data-save" id="12pm"><i class="fa-solid fa-lock"></i></td>
+          <td class="col-1 time-block">12:00PM</td>
+          <td class="col-9 description"><textarea class="col-12 description" name="12-text"></textarea></td>
+          <td class="col-1 saveBtn" id="12pm"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
         <tr id="hour-1" data-time="1" class="time-slot">
-          <td class="data-time">1:00PM</td>
-          <td class="data-schedule"><textarea name=" 1-text"></textarea></td>
-          <td class="data-save" id="1am"><i class="fa-solid fa-lock"></i></td>
+          <td class="col-1 time-block">1:00PM</td>
+          <td class="col-9 description"><textarea class="col-12 description" name=" 1-text"></textarea></td>
+          <td class="col-1 saveBtn" id="1pm"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
         <tr id="hour-2" data-time="2" class="time-slot">
-          <td class="data-time">2:00PM</td>
-          <td class="data-schedule"><textarea name="2-text"></textarea></td>
-          <td class="data-save" id="2am"><i class="fa-solid fa-lock"></i></td>
+          <td class="col-1 time-block">2:00PM</td>
+          <td class="col-9 description"><textarea class="col-12 description" name="2-text"></textarea></td>
+          <td class="col-1 saveBtn" id="2pm"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
         <tr id="hour-3" data-time="3" class="time-slot">
-          <td class="data-time">3:00PM</td>
-          <td class="data-schedule"><textarea name="3-text"></textarea></td>
-          <td class="data-save" id="3am"><i class="fa-solid fa-lock"></i></td>
+          <td class="col-1 time-block">3:00PM</td>
+          <td class="col-9 description"><textarea class="col-12 description" name="3-text"></textarea></td>
+          <td class="col-1 saveBtn" id="3pm"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
         <tr id="hour-4" data-time="4" class="time-slot">
-          <td class="data-time">4:00PM</td>
-          <td class="data-schedule"><textarea name="4-text"></textarea></td>
-          <td class="data-save" id="4am"><i class="fa-solid fa-lock"></i></td>
+          <td class="col-1 time-block">4:00PM</td>
+          <td class="col-9 description"><textarea class="col-12 description" name="4-text"></textarea></td>
+          <td class="col-1 saveBtn" id="4pm"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
         <tr id="hour-5" data-time="5" class="time-slot">
-          <td class="data-time">5:00PM</td>
-          <td class="data-schedule"><textarea name="5-text"></textarea></td>
-          <td class="data-save" id="5am"><i class="fa-solid fa-lock"></i></td>
+          <td class="col-1 time-block">5:00PM</td>
+          <td class="col-9 description"><textarea class="col-12 description" name="5-text"></textarea></td>
+          <td class="col-1 saveBtn" id="5pm"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
       </table>
     </div>
