Changed a title for a column

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <thead>
           <tr>
             <th>Time</th>
-            <th>Schedule</th>
+            <th>Description</th>
             <th>Save</th>
           </tr>
         </thead>
