--- a/index.html
+++ b/index.html
@@ -34,53 +34,53 @@
       <table>
         <thead>
           <tr>
-            <th>Time</th>
-            <th>Description</th>
-            <th>Save</th>
+            <th class="col-1">Time</th>
+            <th class="col-9">Description</th>
+            <th class="col-1">Save</th>
           </tr>
         </thead>
-        <tr id="hour-9" data-time="9" class="time-slot">
-          <td class="col-1 time-block">9:00AM</td>
+        <tr id="hour-9" data-time="9" class="time-block">
+          <td class="col-1 hour">9:00AM</td>
           <td class="col-9 description"><textarea class="col-12 description" name="9-text"></textarea></td>
           <td class="col-1 saveBtn" id="9am"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-10" data-time="10" class="time-slot">
-          <td class="col-1 time-block">10:00AM</td>
+        <tr id="hour-10" data-time="10" class="time-block">
+          <td class="col-1 hour">10:00AM</td>
           <td class="col-9 description"><textarea class="col-12 description" name="10-text"></textarea></td>
           <td class="col-1 saveBtn" id="10am"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-11" data-time="11" class="time-slot">
-          <td class="col-1 time-block">11:00AM</td>
+        <tr id="hour-11" data-time="11" class="time-block">
+          <td class="col-1 hour">11:00AM</td>
           <td class="col-9 description"><textarea class="col-12 description" name="11-text"></textarea></td>
           <td class="col-1 saveBtn" id="11am"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-12" data-time="12" class="time-slot">
-          <td class="col-1 time-block">12:00PM</td>
+        <tr id="hour-12" data-time="12" class="time-block">
+          <td class="col-1 hour">12:00PM</td>
           <td class="col-9 description"><textarea class="col-12 description" name="12-text"></textarea></td>
           <td class="col-1 saveBtn" id="12pm"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-1" data-time="1" class="time-slot">
-          <td class="col-1 time-block">1:00PM</td>
+        <tr id="hour-1" data-time="1" class="time-block">
+          <td class="col-1 hour">1:00PM</td>
           <td class="col-9 description"><textarea class="col-12 description" name=" 1-text"></textarea></td>
           <td class="col-1 saveBtn" id="1pm"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-2" data-time="2" class="time-slot">
-          <td class="col-1 time-block">2:00PM</td>
+        <tr id="hour-2" data-time="2" class="time-block">
+          <td class="col-1 hour">2:00PM</td>
           <td class="col-9 description"><textarea class="col-12 description" name="2-text"></textarea></td>
           <td class="col-1 saveBtn" id="2pm"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-3" data-time="3" class="time-slot">
-          <td class="col-1 time-block">3:00PM</td>
+        <tr id="hour-3" data-time="3" class="time-block">
+          <td class="col-1 hour">3:00PM</td>
           <td class="col-9 description"><textarea class="col-12 description" name="3-text"></textarea></td>
           <td class="col-1 saveBtn" id="3pm"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-4" data-time="4" class="time-slot">
-          <td class="col-1 time-block">4:00PM</td>
+        <tr id="hour-4" data-time="4" class="time-block">
+          <td class="col-1 hour">4:00PM</td>
           <td class="col-9 description"><textarea class="col-12 description" name="4-text"></textarea></td>
           <td class="col-1 saveBtn" id="4pm"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-5" data-time="5" class="time-slot">
-          <td class="col-1 time-block">5:00PM</td>
+        <tr id="hour-5" data-time="5" class="time-block">
+          <td class="col-1 hour">5:00PM</td>
           <td class="col-9 description"><textarea class="col-12 description" name="5-text"></textarea></td>
           <td class="col-1 saveBtn" id="5pm"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
