Deleted some unecessary elements in the HTML. Added a function to change the color of the area where the text goes. Added a click event to save the item that the user enters

--- a/index.html
+++ b/index.html
@@ -39,50 +39,50 @@
             <th class="col-1">Save</th>
           </tr>
         </thead>
-        <tr id="hour-9" data-time="9" class="time-block">
+        <tr id="hour9" class="time-block">
           <td class="col-1 hour">9:00AM</td>
-          <td class="col-9 description"><textarea class="col-12 description" name="9-text"></textarea></td>
-          <td class="col-1 saveBtn" id="9am"><button><i class="bi bi-sd-card"></i></button></td>
+          <td class="col-9 description" id="9"><textarea class="col-12" name="9-text"></textarea></td>
+          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-10" data-time="10" class="time-block">
+        <tr id="hour10" class="time-block">
           <td class="col-1 hour">10:00AM</td>
-          <td class="col-9 description"><textarea class="col-12 description" name="10-text"></textarea></td>
-          <td class="col-1 saveBtn" id="10am"><button><i class="bi bi-sd-card"></i></button></td>
+          <td class="col-9 description" id="10"><textarea class="col-12" name="10-text"></textarea></td>
+          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-11" data-time="11" class="time-block">
+        <tr id="hour11" class="time-block">
           <td class="col-1 hour">11:00AM</td>
-          <td class="col-9 description"><textarea class="col-12 description" name="11-text"></textarea></td>
-          <td class="col-1 saveBtn" id="11am"><button><i class="bi bi-sd-card"></i></button></td>
+          <td class="col-9 description" id="11"><textarea class="col-12" name="11-text"></textarea></td>
+          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-12" data-time="12" class="time-block">
+        <tr id="hour12" class="time-block">
           <td class="col-1 hour">12:00PM</td>
-          <td class="col-9 description"><textarea class="col-12 description" name="12-text"></textarea></td>
-          <td class="col-1 saveBtn" id="12pm"><button><i class="bi bi-sd-card"></i></button></td>
+          <td class="col-9 description" id="12"><textarea class="col-12" name="12-text"></textarea></td>
+          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-1" data-time="1" class="time-block">
+        <tr id="hour13" class="time-block">
           <td class="col-1 hour">1:00PM</td>
-          <td class="col-9 description"><textarea class="col-12 description" name=" 1-text"></textarea></td>
-          <td class="col-1 saveBtn" id="1pm"><button><i class="bi bi-sd-card"></i></button></td>
+          <td class="col-9 description" id="13"><textarea class="col-12" name=" 1-text"></textarea></td>
+          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-2" data-time="2" class="time-block">
+        <tr id="hour14" class="time-block">
           <td class="col-1 hour">2:00PM</td>
-          <td class="col-9 description"><textarea class="col-12 description" name="2-text"></textarea></td>
-          <td class="col-1 saveBtn" id="2pm"><button><i class="bi bi-sd-card"></i></button></td>
+          <td class="col-9 description" id="14"><textarea class="col-12" name="2-text"></textarea></td>
+          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-3" data-time="3" class="time-block">
+        <tr id="hour15" class="time-block">
           <td class="col-1 hour">3:00PM</td>
-          <td class="col-9 description"><textarea class="col-12 description" name="3-text"></textarea></td>
-          <td class="col-1 saveBtn" id="3pm"><button><i class="bi bi-sd-card"></i></button></td>
+          <td class="col-9 description" id="15"><textarea class="col-12" name="3-text"></textarea></td>
+          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-4" data-time="4" class="time-block">
+        <tr id="hour16" class="time-block">
           <td class="col-1 hour">4:00PM</td>
-          <td class="col-9 description"><textarea class="col-12 description" name="4-text"></textarea></td>
-          <td class="col-1 saveBtn" id="4pm"><button><i class="bi bi-sd-card"></i></button></td>
+          <td class="col-9 description" id="16"><textarea class="col-12" name="4-text"></textarea></td>
+          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
-        <tr id="hour-5" data-time="5" class="time-block">
+        <tr id="hour17" class="time-block">
           <td class="col-1 hour">5:00PM</td>
-          <td class="col-9 description"><textarea class="col-12 description" name="5-text"></textarea></td>
-          <td class="col-1 saveBtn" id="5pm"><button><i class="bi bi-sd-card"></i></button></td>
+          <td class="col-9 description" id="17"><textarea class="col-12" name="5-text"></textarea></td>
+          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
         </tr>
       </table>
     </div>
