Added notes to the HTML

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <!-- Table to contain the time areas -->
       <table>
+      <!-- Defines the headers for each of the sections -->
         <thead>
           <tr>
             <th class="col-1">Time</th>
@@ -39,6 +41,7 @@
             <th class="col-1">Save</th>
           </tr>
         </thead>
+      <!-- Each row of the table containing the time areas is defined here -->
         <tr id="hour9" class="time-block">
           <td class="col-1 hour">9:00AM</td>
           <td class="col-9 description" id="9"><textarea class="col-12" name="9-text"></textarea></td>
