Changed the tds to divs to make them easier to work with. Fixed the saving problme in the js, but the textateas aren't changing color yet

--- a/index.html
+++ b/index.html
@@ -31,62 +31,55 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <!-- Table to contain the time areas -->
       <table>
-      <!-- Defines the headers for each of the sections -->
-        <thead>
-          <tr>
-            <th class="col-1">Time</th>
-            <th class="col-9">Description</th>
-            <th class="col-1">Save</th>
-          </tr>
-        </thead>
-      <!-- Each row of the table containing the time areas is defined here -->
-        <tr id="hour9" class="time-block">
-          <td class="col-1 hour">9:00AM</td>
-          <td class="col-9 description" id="9"><textarea class="col-12" name="9-text"></textarea></td>
-          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
-        </tr>
-        <tr id="hour10" class="time-block">
-          <td class="col-1 hour">10:00AM</td>
-          <td class="col-9 description" id="10"><textarea class="col-12" name="10-text"></textarea></td>
-          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
-        </tr>
-        <tr id="hour11" class="time-block">
-          <td class="col-1 hour">11:00AM</td>
-          <td class="col-9 description" id="11"><textarea class="col-12" name="11-text"></textarea></td>
-          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
-        </tr>
-        <tr id="hour12" class="time-block">
-          <td class="col-1 hour">12:00PM</td>
-          <td class="col-9 description" id="12"><textarea class="col-12" name="12-text"></textarea></td>
-          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
-        </tr>
-        <tr id="hour13" class="time-block">
-          <td class="col-1 hour">1:00PM</td>
-          <td class="col-9 description" id="13"><textarea class="col-12" name=" 1-text"></textarea></td>
-          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
-        </tr>
-        <tr id="hour14" class="time-block">
-          <td class="col-1 hour">2:00PM</td>
-          <td class="col-9 description" id="14"><textarea class="col-12" name="2-text"></textarea></td>
-          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
-        </tr>
-        <tr id="hour15" class="time-block">
-          <td class="col-1 hour">3:00PM</td>
-          <td class="col-9 description" id="15"><textarea class="col-12" name="3-text"></textarea></td>
-          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
-        </tr>
-        <tr id="hour16" class="time-block">
-          <td class="col-1 hour">4:00PM</td>
-          <td class="col-9 description" id="16"><textarea class="col-12" name="4-text"></textarea></td>
-          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
-        </tr>
-        <tr id="hour17" class="time-block">
-          <td class="col-1 hour">5:00PM</td>
-          <td class="col-9 description" id="17"><textarea class="col-12" name="5-text"></textarea></td>
-          <td class="col-1 saveBtn"><button><i class="bi bi-sd-card"></i></button></td>
-        </tr>
+        <div>
+      <!-- Each row of the table containing the time areas is defined here, used dvis instead of rows to make it easier -->
+        <div id="9" class=" row time-block">
+          <div class="col-1 hour">9:00AM</div>
+          <textarea class="col-10 description"></textarea>
+          <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
+        </div>
+        <div id="10" class=" row time-block">
+          <div class="col-1 hour">10:00AM</div>
+          <textarea class="col-10 description"></textarea>
+          <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
+        </div>
+        <div id="11" class=" row time-block">
+          <div class="col-1 hour">11:00AM</div>
+          <textarea class="col-10 description"></textarea>
+          <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
+        </div>
+        <div id="12" class=" row time-block">
+          <div class="col-1 hour">12:00PM</div>
+          <textarea class="col-10 description"></textarea>
+          <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
+        </div>
+        <div id="13" class=" row time-block">
+          <div class="col-1 hour">1:00PM</div>
+          <textarea class="col-10 description"></textarea>
+          <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
+        </div>
+        <div id="14" class=" row time-block">
+          <div class="col-1 hour">2:00PM</div>
+          <textarea class="col-10 description"></textarea>
+          <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
+        </div>
+        <div id="15" class=" row time-block">
+          <div class="col-1 hour">3:00PM</div>
+          <textarea class="col-10 description"></textarea>
+          <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
+        </div>
+        <div id="16" class=" row time-block">
+          <div class="col-1 hour">4:00PM</div>
+          <textarea class="col-10 description"></textarea>
+          <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
+        </div>
+        <div id="17" class=" row time-block">
+          <div class="col-1 hour">5:00PM</div>
+          <textarea class="col-10 description"></textarea>
+          <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
+        </div>
+      </div>
       </table>
     </div>
 
