--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <table>
         <div>
       <!-- Each row of the table containing the time areas is defined here, used dvis instead of rows to make it easier -->
-        <div id="9" class=" row time-block">
+        <div class=" row time-block" id="9">
           <div class="col-1 hour">9:00AM</div>
           <textarea class="col-10 description"></textarea>
           <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
