--- a/index.html
+++ b/index.html
@@ -39,42 +39,42 @@
           <textarea class="col-10 description"></textarea>
           <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
         </div>
-        <div id="10" class=" row time-block">
+        <div class=" row time-block" id="10">
           <div class="col-1 hour">10:00AM</div>
           <textarea class="col-10 description"></textarea>
           <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
         </div>
-        <div id="11" class=" row time-block">
+        <div class=" row time-block" id="11">
           <div class="col-1 hour">11:00AM</div>
           <textarea class="col-10 description"></textarea>
           <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
         </div>
-        <div id="12" class=" row time-block">
+        <div class=" row time-block" id="12">
           <div class="col-1 hour">12:00PM</div>
           <textarea class="col-10 description"></textarea>
           <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
         </div>
-        <div id="13" class=" row time-block">
+        <div class=" row time-block" id="13">
           <div class="col-1 hour">1:00PM</div>
           <textarea class="col-10 description"></textarea>
           <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
         </div>
-        <div id="14" class=" row time-block">
+        <div class=" row time-block" id="14">
           <div class="col-1 hour">2:00PM</div>
           <textarea class="col-10 description"></textarea>
           <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
         </div>
-        <div id="15" class=" row time-block">
+        <div class=" row time-block" id="15">
           <div class="col-1 hour">3:00PM</div>
           <textarea class="col-10 description"></textarea>
           <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
         </div>
-        <div id="16" class=" row time-block">
+        <div class=" row time-block" id="16">
           <div class="col-1 hour">4:00PM</div>
           <textarea class="col-10 description"></textarea>
           <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
         </div>
-        <div id="17" class=" row time-block">
+        <div class=" row time-block" id="17">
           <div class="col-1 hour">5:00PM</div>
           <textarea class="col-10 description"></textarea>
           <button class="col-1 saveBtn"><i class="bi bi-sd-card"></i></button>
